--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "gemini-prompt",
   "version": "1.0.0",
-  "type":"module",
+  "type": "module",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,8 @@
     "@google/generative-ai": "^0.21.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nodemon": "^3.1.9"
+    "http": "^0.0.1-security",
+    "nodemon": "^3.1.9",
+    "url": "^0.11.4"
   }
 }
