--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google/generative-ai": "^0.21.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "nodemon": "^3.1.9",
     "url": "^0.11.4"
